# febos

./: LICENSE  README.md  main.py  pyproject.toml
src/febos/: __init__.py  api.py  client.py  data_model.py  endpoint.py  error.py  errors.py  get_data_analysis.py  get_febos_slave.py  get_historical_data.py  get_language.py  installation.py  login.py  page_config.py  realtime_data.py
tests/: conftest.py  test_febos.py  test_get_data_analysis.py  test_get_febos_slave.py  test_get_historical_data.py  test_get_language.py  test_installation.py  test_login.py  test_page_config.py  test_realtime_data.py
