[project]
name = "febos"
version = "0.0.1"
description = "Python API for EmmeTI Febos webapp"
authors = [
    {name = "Valerio Di Gregorio"},
]
dependencies = [
    "requests==2.32.3",
    "pydantic==2.10.6",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/digregoriovalerio/febos"
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
